<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:visibility="visible" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"
        android:inputType="text"
        android:visibility="visible" />

    <Switch
        android:id="@+id/shared_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/half_or_unique"
        android:visibility="gone"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/shared_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/own_share_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/own"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/others_share_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/other"
            android:inputType="numberDecimal"
            android:autofillHints="0" />
    </LinearLayout>

    <!-- További elemeket, mint a DatePickerDialog indító gombja, hozzáadhatod, ha szükséges. -->

</LinearLayout>
